[package]
name = "nettle"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.6"
slotmap = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
hyper = "0.14"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
rsa = { version = "0.9", features = ["serde"] }

[profile.dev]
opt-level = 2
