[package]
name = "nettle"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.6"
slotmap = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json"] }
hyper = "0.14"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
rsa = { version = "0.9", features = ["serde"] }
futures = "0.3"
sha3 = "0.10"
rand_chacha = "0.3"
hex = "0.4"
clap = { version = "4.3", features = ["derive"] }

[dev-dependencies]
dot = "0.1"

[profile.dev]
opt-level = 2
